# eth-decoder

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  Makefile  README.md  eslint.config.mjs  evm.func_sign.csv  middleware.js  package-lock.json  package.json  playwright.config.js  proxy.js  vitest.config.js
.github/workflows/: abi-server.yml  auto-merge.yml  ci.yml  deploy.yml  release.yml
abi_server/: Dockerfile  compose.yaml  main.py  pyproject.toml  serialization.py
abi_server/tests/: conftest.py  evm.func_sign.csv  test_decode_fixture_rows.py  test_main.py
app/: globals.css  layout.js  page.js  page.module.css
app/address-book/: page.js  page.module.css
app/components/: Nav.js  Nav.module.css  SettingsPanel.js  SettingsPanel.module.css
app/contexts/: SettingsContext.js  ThemeContext.js
app/contract-caller/: page.js  page.module.css
app/contracts/: page.js  page.module.css
app/event-decoder/: page.js  page.module.css
app/tx-decoder/: page.js
app/utils/: abiCache.js  addressBook.js  balanceChanges.js  blobCache.js  chains.js  cheatcodes.js  coingecko.js  contractInfo.js  contractsCache.js  decoder.js  fetchBlockTimestamp.js  jsonNumbers.js  multicall.js  multicallDecoder.js  normalizeArg.js  openchain.js  platform.js  rpcMetrics.js  (+13 more)
desktop/: App.jsx  index.html  main.jsx  platform.js  vite.config.js
scripts/: patch-tevm-node.js  run-e2e.sh  simulate-tx.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
stubs/: node-fs.js
(+181 files in other folders)
