[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "abi-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "psycopg2-binary",
  "eth-utils<6",
  "eth-abi @ git+https://github.com/jsvisa/eth-abi@decode-less-strict",
  "multicall-py",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
abi-server = "main:main"

[tool.setuptools]
py-modules = ["main", "serialization"]
