[package]
name = "decoder-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "decoder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
